[gd_scene load_steps=8 format=2]

[ext_resource path="res://modifiers/contrast/modifier_contrast.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme/panel_styleboxflat_dark.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/AddModifiers.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/FileImporter.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/ModifierStack.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.396078, 0.286275, 0.286275, 1 )
border_color = Color( 0.823529, 0.439216, 0.439216, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[node name="Panel" type="Panel"]
margin_left = 879.0
margin_right = 1280.0
margin_bottom = 768.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddModifiers" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_bottom = 20.0

[node name="VSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 24.0
margin_right = 381.0
margin_bottom = 44.0
custom_constants/separation = 20

[node name="ModifierStack" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 381.0
margin_bottom = 525.0
size_flags_vertical = 3

[node name="modifiers_container" type="VBoxContainer" parent="VBoxContainer/ModifierStack"]
margin_right = 381.0
margin_bottom = 119.0
size_flags_horizontal = 3
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modifier Contrast" parent="VBoxContainer/ModifierStack/modifiers_container" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 381.0
margin_bottom = 119.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 529.0
margin_right = 381.0
margin_bottom = 619.0
custom_constants/margin_top = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteModifiers" type="Panel" parent="VBoxContainer/MarginContainer"]
margin_top = 30.0
margin_right = 381.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 60 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/DeleteModifiers"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Delete Modifier (Drag Here)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 623.0
margin_right = 381.0
margin_bottom = 627.0

[node name="FileImporter" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 631.0
canvas_path = NodePath("../../../main area/VBoxContainer/canvas")

[node name="DropVisualizer" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 3.1748
margin_top = 386.98
margin_bottom = 390.98
rect_min_size = Vector2( 0, 3 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="image_loaded" from="VBoxContainer/FileImporter" to="." method="set_base_image"]
